[package]
name = "dsa-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
dashmap = "5.4.0"
parking_lot = "0.12.1"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "concurrent_lru"
harness = false

